--- a/AnalysisReport.Rmd
+++ b/AnalysisReport.Rmd
@@ -26,7 +26,7 @@ library(ggbeeswarm)
 library(GGally)
 library(effsize)
 library(magrittr)
-library(sem)
+
 
 flattenCorrMatrix <- function(cormat, pmat) {
   ut <- upper.tri(cormat)
@@ -1111,16 +1111,17 @@ dev.off()
 
 ```
 ```{r HK additional analysis for main effects compact plot}
-# library(scatterplot3d)
-# dfSummary$ownership <-dfSummary$SoO
-# fit.OPerf <- lm(formula = SoANEW ~ Performance + SoO , data = dfSummary)
-# pd<-dfSummary %>% select(Performance ,SoO, SoANEW,Level)
-# pd.aug<-lions.augmented <- augment(fit.OPerf, pd)
-# p <- scatterplot3d(y=pd$SoO, z=pd$SoANEW, x=pd$Performance,angle=55,type='h',
-#                    pch = 16, color = "steelblue")
-# 
-# # add a plane representing the fit of the model
-# p$plane3d(fit.OPerf, col='orangered')
+library(scatterplot3d)
+dfSummary$ownership <-dfSummary$SoO
+fit.OPerf <- lm(formula = SoANEW ~ Performance + SoO , data = dfSummary)
+pd<-dfSummary %>% select(Performance ,SoO, SoANEW,Level)
+pd.aug<-lions.augmented <- augment(fit.OPerf, pd)
+
+p <- scatterplot3d(y=pd$SoO, z=pd$SoANEW, x=pd$Performance,angle=55,type='h',
+                   pch = 16, color = "steelblue")
+plot.new()
+# add a plane representing the fit of the model
+p$plane3d(fit.OPerf, col='orangered')
 
 ggplot(pd.aug, aes(SoANEW, .resid)) + 
     geom_point() + geom_smooth(method="lm", color="red",se=FALSE) +
@@ -1132,31 +1133,32 @@ ggplot(pd.aug, aes(Performance, .resid)) +
   labs(y = "Residuals", title = "Residual plot of the regression model.")
 
 mypalette <- c("firebrick", "royalblue") 
-# sp <- scatterplot3d::scatterplot3d(y=pd$SoO, 
-#                                    z=pd$SoANEW, 
-#                                    x=pd$Performance,
-#                                    angle = 45,
-#                                    # col = mypalette[as.numeric(as.factor(pd$Level))],
-#                                    xlab="performance", ylab="ownership", zlab="agency")
-# sp$plane3d(fit.OPerf, lty.box = "solid")#,
-#            # polygon_args = list(col = rgb(.1, .2, .7, .5)) # Fill color
+sp <- scatterplot3d::scatterplot3d(y=pd$SoO,
+                                   z=pd$SoANEW,
+                                   x=pd$Performance,
+                                   angle = 45,
+                                   # col = mypalette[as.numeric(as.factor(pd$Level))],
+                                   xlab="performance", ylab="ownership", zlab="agency")
+plot.new()
+sp$plane3d(fit.OPerf, lty.box = "solid")#,
+           # polygon_args = list(col = rgb(.1, .2, .7, .5)) # Fill color
 
 ggplot(dfSummary,aes(x=SoO,y=SoANEW,size=Performance))+geom_point()
 
-# orig <- sp$xyz.convert(y=pd$SoO, 
-#                        z=pd$SoANEW, 
-#                        x=pd$Performance)
-# plane <- sp$xyz.convert(pd$Performance,
-#                         pd$SoO, 
-#                         fitted(fit.OPerf))
-# i.negpos <- 1 + (resid(fit.OPerf) > 0)
-# segments(orig$x, orig$y, plane$x, plane$y,
-#          col = c("blue", "red")[i.negpos], 
-#          lty = 1) # (2:1)[i.negpos]
-# sp <- FactoClass::addgrids3d(y=pd$SoO, 
-#                              z=pd$SoANEW, 
-#                              x=pd$Performance,
-#                              angle = 55)
+orig <- sp$xyz.convert(y=pd$SoO,
+                       z=pd$SoANEW,
+                       x=pd$Performance)
+plane <- sp$xyz.convert(pd$Performance,
+                        pd$SoO,
+                        fitted(fit.OPerf))
+i.negpos <- 1 + (resid(fit.OPerf) > 0)
+segments(orig$x, orig$y, plane$x, plane$y,
+         col = c("blue", "red")[i.negpos],
+         lty = 1) # (2:1)[i.negpos]
+sp <- FactoClass::addgrids3d(y=pd$SoO,
+                             z=pd$SoANEW,
+                             x=pd$Performance,
+                             angle = 55)
 
 
 
@@ -1211,8 +1213,19 @@ dfSummary<- dfSummary %>%  add_predictions(modOLxP)
     SoANEW ~ 1+  SoO + LevXPerf 
     Frustration ~ 1  + LevXPerf + SoANEW 
   '
-  fitm4<-sem(m4,data=dfSummary)
+  fitm4<-lavaan::sem(m4,data=dfSummary)
   summary(fitm4)
   modificationindices(fitm4)
   fitm4
+  library(lavaan)
+  library(tidySEM)
+  graph_sem(model = fitm4)
+  
+  prepare_graph(fitm4) %>%
+  color_pos_edges("green") %>%
+  color_neg_edges("red") %>%
+  color_var("black") %>%
+  alpha_var(.2) %>%
+  plot()
+  
 ```
